# AmbiSense_IOT

./: FlowSprint 1.json  README.md  Sprint 2.json
codigo_fuente/: Codigo_ESP32.py  Esp_Ventilador.py  Pasos_LVGL.txt  ui.ino
diseño_pantalla/Codigo/Smart_Gadget/libraries/: lv_conf.h
diseño_pantalla/Codigo/Smart_Gadget/libraries/TFT_eSPI/: User_Setup.h
diseño_pantalla/Codigo/Smart_Gadget/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h
diseño_pantalla/Codigo/Smart_Gadget/libraries/ui/src/images/: ui_img_1410985035.c  ui_img_1466347900.c  ui_img_2131096662.c  ui_img_728093_png.c  ui_img_sound_png26_png.c  ui_img_ventilador__1png_png.c
diseño_pantalla/Codigo/Smart_Gadget/libraries/ui/src/screens/: ui_Call.c  ui_Clock.c  ui_Splash.c  ui_panelGas.c  ui_panelHumedad.c  ui_panelLuz.c  ui_panelSonido.c  ui_panelTemperatura.c
diseño_pantalla/Codigo/Smart_Gadget/ui/: ui.ino
diseño_pantalla/Proyecto_SquareLine/: Smart_Gadget.sll  Smart_Gadget.spj  Smart_Gadget_events.py
imagenes_prototipo/: README.md
node_red_flogs/: README.MD  README.md
prototipos_3d/: README.md
